--- a/simpleTile/index-dev.html
+++ b/simpleTile/index-dev.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>ScalaJS Can't touch the woods Example</h1>
+    <p>up: i down: k left: j right: l</p>
     <script type="text/javascript" src="./target/scala-2.11/scala-js-tutorial-fastopt.js"></script>
     <!-- Run tutorial.webapp.TutorialApp -->
     <script type="text/javascript">
